<resources>
    <string name="app_name">CryptoWallet</string>
    <string name="actions_menu">Actions</string>
    <string name="assets_menu">Assets</string>
    <string name="crypto_menu">Crypto</string>
    <string name="more_menu">More</string>
    <string name="crypto">Crypto</string>
    <string name="in_usd">In USD</string>
    <string name="add_a_tracked_cryptocurrency">Add a tracked cryptocurrency</string>
    <string name="assets">Assets</string>
    <string name="add_a_new_assets">Add a new assets</string>
    <string name="name_asset">Name asset</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="selection_currency">Selection currency</string>
    <string name="currency">Currency:</string>
    <string name="delete">Delete</string>
    <string name="login">LogIn</string>
    <string name="confirm_delete">Delete?</string>
    <string name="switch_show_monday_present_activity">Switch show monday present activity</string>
    <string name="search">Search</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="_0_00">0.00</string>
    <string name="more">More</string>
</resources>
