<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".presentation.screen.assets.add.AddAssetDialog">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_name_assets"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/name_asset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_password_assets"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_name_assets" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_currency_selection"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/selection_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_currency"
            app:layout_constraintTop_toBottomOf="@+id/add_password_assets" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_currency"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/currency"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/spin_currency_selection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_password_assets" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_assets_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_assets_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spin_currency_selection" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_assets_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_add_assets_cancel"
            app:layout_constraintTop_toBottomOf="@+id/spin_currency_selection" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>