<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.screen.crypto.add.AddCryptoDialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_currency_tv"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/currency"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sp_add_crypto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_add_crypto"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:contentDescription="@string/add_a_tracked_cryptocurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_currency_tv"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_crypto_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_crypto_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_currency_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_crypto_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_crypto_add"
        app:layout_constraintTop_toBottomOf="@+id/add_currency_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>