<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.screen.assets.login.LogInDialog">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_assets"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_assets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_assets"
        app:layout_constraintTop_toBottomOf="@+id/password_assets" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_assets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_assets"
        app:layout_constraintTop_toBottomOf="@+id/password_assets" />
</androidx.constraintlayout.widget.ConstraintLayout>