<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.screen.crypto.delete.DeleteCryptoDialog">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirm_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_crypto_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_crypto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_delete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_crypto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_crypto_delete"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>