<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.actions.ActionsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_switch_monday_previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/switch_show_monday_present_activity"
            android:src="@drawable/baseline_switch_right_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="9dp"
            android:gravity="center_horizontal|top"
            android:text="June"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="22dp"
            tools:text="Monday" />

        <ImageView
            android:id="@+id/btn_switch_monday_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/switch_show_monday_present_activity"
            android:src="@drawable/baseline_switch_left_24" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:contentDescription="@string/search"
            android:src="@drawable/baseline_search_24" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textColor="@color/blue_400"
        app:layout_constraintEnd_toStartOf="@+id/expenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses"
        android:textColor="@color/red_400"
        app:layout_constraintEnd_toStartOf="@+id/balance"
        app:layout_constraintStart_toEndOf="@+id/income"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expenses"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/unit_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textColor="@color/blue_400"
        app:layout_constraintEnd_toEndOf="@+id/income"
        app:layout_constraintStart_toStartOf="@+id/income"
        app:layout_constraintTop_toBottomOf="@+id/income"
        tools:text="25`000" />

    <TextView
        android:id="@+id/unit_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textColor="@color/red_400"
        app:layout_constraintEnd_toEndOf="@+id/expenses"
        app:layout_constraintStart_toStartOf="@+id/expenses"
        app:layout_constraintTop_toBottomOf="@+id/expenses" />

    <TextView
        android:id="@+id/unit_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="@+id/balance"
        app:layout_constraintStart_toStartOf="@+id/balance"
        app:layout_constraintTop_toBottomOf="@+id/balance"
        tools:text="25`000" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_expenses"
        tools:itemCount="5"
        tools:listitem="@layout/actions_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/add_a_new_assets"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
